# stromtest-2035

./: .gitignore  LICENSE  README.md  package-lock.json
.github/workflows/: ci.yml
docs/: design.md  methodology.md
modeling/: RUNBOOK.md  Snakefile  pyproject.toml
modeling/busmap/: README.md  generate_busmap.py  unb_busmap.csv
modeling/configs/: de-tutorial-custom-busmap.yaml  de-tutorial.yaml
modeling/patches/: README.md  pypsa_eur-build-cutout.patch
modeling/scenarios/: _template.yml  index.yml
modeling/scenarios/agora/: CHANGELOG.md
modeling/scenarios/habeck/: 2024-klima45.0.yml  CHANGELOG.md
modeling/scenarios/nep/: CHANGELOG.md
modeling/scenarios/reiche/: 2026-05-17.0.yml  CHANGELOG.md
modeling/src/stromtest/: __init__.py  aggregate.py  apply.py  cli.py  inject_capacities.py
modeling/src/stromtest/busmap/: __init__.py
modeling/src/stromtest/hydrogen/: __init__.py
modeling/src/stromtest/translation/: __init__.py  schema.py  translate.py
modeling/tests/: test_aggregate.py  test_apply.py  test_busmap.py  test_inject_capacities.py  test_real_scenarios.py  test_schema.py  test_translate.py  test_yaml_loading.py
modeling/tests/fixtures/: example_scenario.yml
modeling/weather_years/: README.md
web/: package-lock.json  package.json
web/scripts/: sync-scenarios.mjs
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/about/: page.tsx
web/src/app/methodology/: page.tsx
web/src/app/scenarios/: page.tsx
web/src/components/dispatch/: dispatch-panel.tsx  stacked-area-chart.tsx  time-machine.tsx  weather-year-selector.tsx  zone-map.tsx
web/src/components/scenarios/: scenario-card.tsx
web/src/components/site/: footer.tsx  nav.tsx
web/src/data/: scenarios.json  zones.json
web/src/lib/: data-loader.ts  dispatch-utils.ts  dispatch.ts  scenarios.ts  weather-years.ts  zone-paths.ts
(+4 files in other folders)
