[project]
name = "stromtest"
version = "0.0.1"
description = "Translation + Snakemake pipeline for the stromtest-2035 case study"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Matthis Damm" }]

# Core dependencies needed for scenario translation + schema validation.
# Heavy modeling deps (pypsa, atlite, snakemake) are in the `modeling`
# dependency group to keep install fast for translation-only work and CI.
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.scripts]
stromtest = "stromtest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stromtest"]

[dependency-groups]
# Activate with: uv sync --group modeling
# Required for actually running PyPSA-Eur pipelines.
modeling = [
    "pypsa>=0.30",
    "linopy>=0.4",
    "atlite>=0.4",
    "snakemake>=8.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "xarray>=2024.1",
]

# Activate with: uv sync --group dev (or default)
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
